# BeaverSec

./: .gitattributes  .gitignore  BIBLIA_BEAVERSEC.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  auto_scan.py  beaversec_runner.py  clean.sh  install.sh  main.py  main.py.bak  ping_result.json  pyproject.toml  refatorar.py  report.html  requirements.txt  resultado.html  resultado.json  scan.sh  senttings.json  setup.sh  testar_tudo.sh  update.sh
.github/workflows/: ci.yml
BeaverSec-main/beaversec/modules/: __init__.py
beaversec/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  main.py
beaversec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
beaversec/cli/: __init__.py  commands.py  parser.py
beaversec/config/: __init__.py  loader.py
beaversec/core/: __init__.py  base.py  base_module.py  exceptions.py  handler.py  logging.py  rate_limiter.py  registry.py  result.py  security.py
beaversec/modules/: __init__.py  arp_scan.py  banner_grabber.py  dns_enum.py  dns_zone_transfer.py  http_headers.py  os_detection.py  ping_sweep.py  port_scanner.py  service_detection.py  shodan_enum.py  snmp_enum.py  ssl_cipher_scan.py  ssl_scan.py  subdomain_brute.py  syn_scan.py  traceroute.py  udp_scan.py  vuln_scanner.py  whois_lookup.py
beaversec/modules_working/: ping_sweep.py  port_scanner.py
beaversec/utils/: security.py
scripts/: install.sh
tests/: __init__.py  conftest.py  test_dns_zone_transfer.py  test_ping_sweep.py  test_service_detection.py
tests/integration/: test_install_cli.py
tests/test_core/: test_security.py
