[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beaversec"
version = "0.2.0"
description = "Ferramenta modular de cibersegurança para pentest"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Jhonatan", email = "jhonatan@example.com"},
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "requests>=2.31",
    "dnspython>=2.4",
]

[project.scripts]
beaversec = "beaversec.cli:cli"

[tool.setuptools]
packages = ["beaversec", "beaversec.core", "beaversec.utils", "beaversec.modules", "beaversec.exporters"]

[tool.ruff]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104", "D203", "D212"]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"