[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beaversec"
version = "4.0.0"
description = "BeaverSec - Modular Offensive Security Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jhonatan L. Santos", email = "ojhonatanls@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
    "pydantic>=1.10",
    "aiohttp>=3.8",
    "pyyaml>=6.0",
    "dnspython>=2.3",
    "shodan>=1.27",
    "pysnmp>=4.4",
    "scapy>=2.4",
    "cryptography>=41.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/ojhonatanls/BeaverSec"
Repository = "https://github.com/ojhonatanls/BeaverSec"
Issues = "https://github.com/ojhonatanls/BeaverSec/issues"

[project.entry-points."beaversec.modules"]
ping_sweep = "beaversec.modules.ping_sweep:PingSweepModule"
port_scanner = "beaversec.modules.port_scanner:PortScannerModule"
syn_scan = "beaversec.modules.syn_scan:SynScanModule"
udp_scan = "beaversec.modules.udp_scan:UDPScanModule"
dns_enum = "beaversec.modules.dns_enum:DNSEnum"
dns_zone_transfer = "beaversec.modules.dns_zone_transfer:DNSZoneTransferModule"
subdomain_brute = "beaversec.modules.subdomain_brute:SubdomainBruteModule"
ssl_scan = "beaversec.modules.ssl_scan:SSLScanModule"
ssl_cipher_scan = "beaversec.modules.ssl_cipher_scan:SSLCipherScanModule"
http_headers = "beaversec.modules.http_headers:HTTPHeadersModule"
whois_lookup = "beaversec.modules.whois_lookup:WhoisLookup"
shodan_enum = "beaversec.modules.shodan_enum:ShodanEnumModule"
vuln_scanner = "beaversec.modules.vuln_scanner:VulnScannerModule"
service_detection = "beaversec.modules.service_detection:ServiceDetectionModule"
os_detection = "beaversec.modules.os_detection:OSDetectionModule"
snmp_enum = "beaversec.modules.snmp_enum:SNMPEnumModule"
arp_scan = "beaversec.modules.arp_scan:ArpScanModule"
banner_grabber = "beaversec.modules.banner_grabber:BannerGrabberModule"

[project.scripts]
beaversec = "beaversec.cli:cli"

[tool.setuptools.packages.find]
include = ["beaversec*"]
exclude = ["assets*", "tests*", "scripts*", "venv*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take longer to run",
    "security: Security-related tests",
]